2016-04-22  Niibe Yutaka  <gniibe@fsij.org>

	* example-fs-bb48/first-pages.c: Rename from reset.c and merge
	crc32.c.
	* example-fs-bb48/sample.ld: Define section for first two pages.
	* example-fs-bb48/usb_kl27z.c (__usb_buf__): Remove.

	* chopstx.c (chx_cond_hook): Rename from chopstx_cond_hook and make
	it internal.
	(chx_cond_unhook): Likewise.
	(chx_join_hook, chx_join_unhook): New.
	(chopstx_poll): Change API, not exposing internals of hook/unhook.

	* example-fs-bb48/sample.c (main): Follow the API change of
	chopstx_poll.

2016-04-21  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_snooze, chx_wakeup): New.
	(chopstx_cond_hook, chopstx_cond_unhook): New.
	(chopstx_cond_signal, chopstx_cond_broadcast): Fix for poll.
	(chx_proxy_init): Initialize with RUNNING.
	(chopstx_poll): Fix with chx_snooze.
	(chx_exit): Use chx_wakeup.

	* example-fs-bb48/sample.c (main): Update with chopstx_poll.
	* example-fs-bb48/usb-cdc.c (stream_recv): Fix the loop clear
	FLAG_RECV_AVAIL only after we process it.

2016-04-20  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_stm32f103.c (usb_lld_reset): Supply FEATURE
	argument.  Call usb_lld_set_configuration internally and set
	FEATURE.
	(usb_lld_set_feature): Remove.
	* example-cdc/usb-cdc.c (usb_cb_device_reset): Update with new
	API.

	* example-cdc/sys.c: Include clk_gpio_init-stm32.c.
	* example-led/sys.c, example-primer2/sys.c: Ditto.

2016-04-19  Niibe Yutaka  <gniibe@fsij.org>

	* example-fs-bb48/sample.c (main): Change the example to display
	CRC32 value from input line.

2016-04-18  Niibe Yutaka  <gniibe@fsij.org>

	* example-fs-bb48: New directory for FS-BB48.

	* clk_gpio_init-kl.c: New.
	* clk_gpio_init-stm32.c: Rename from clk_gpio_init.c.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-fsm-55/sys.c: Update for non-SVC Chopstx.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c: Update.

	* example-cdc/usb_stm32f103.c (usb_handle_transfer): Don't use