@@ -1,3 +1,7 @@
+2016-04-24  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx.c (chx_snooze): Wait forever when it's POLL and usec==0.
+
 2016-04-22  Niibe Yutaka  <gniibe@fsij.org>
 
 	* example-fs-bb48/first-pages.c: Rename from reset.c and merge
